packages/frontend/src/components/dataContracts/DataContractTotalCard.scss
@use '../../styles/mixins.scss';
@import '../../styles/variables.scss';

.DataContractTotalCard {
  @include mixins.TotalCard();

  &__TitleContainer {
    display: flex;
    justify-content: space-between;
    align-items: baseline;
  }

  &__Edit {
      background: rgba(var(--chakra-colors-brand-normal-rgb), .2);
      color: var(--chakra-colors-brand-normal);
      font-family: $font-mono;
      border-radius: 10px;
      padding: 0.5rem 1rem;
      font-weight: 400;
      font-size: 12px;
      line-height: 130%;
      letter-spacing: 0%;

  }

  &__Title {
    font-weight: 700;
    font-size: 0.875rem;
    margin-bottom: 0.875rem;
    font-family: Montserrat;
    font-weight: 800;
    font-style: Italic;
    font-size: 14px;
    line-height: 120%;
    text-transform: uppercase;
  }

  &__HeaderLines {
    width: 100%;
  }

  &__Identifier, &__Owner {
    .InfoLine__Value {
      width: 100%;
      text-align: right;
      overflow: hidden;
      
      .Identifier {
        justify-content: flex-end;
      }
    }
  }

  &__Owner {
    .ValueCard {
      max-width: max-content;
      margin-left: auto;
    }
  }

  @media screen and (max-width: $breakpoint-md) {
    @include mixins.TotalCard(true);

    &__Header {
      .InfoLine {
        flex-wrap: wrap;
        justify-content: flex-start;
        gap: 5px;

        &__Title {
          width: 100%;
        }

        &__Value {
          width: 100%;
          justify-content: flex-start;
          text-align: left;
        }
      }
    }

    &__Identifier {
      .Identifier {
        justify-content: flex-start !important;
      }
    }

    &__Identifier {
      padding-right: 100px;
    }

    &__Owner {
      .ValueCard {
        width: max-content;
        max-width: 100%;
        margin-left: 0;
      }
    }
  }
}

